# agent-prompt-observatory

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  UI_RESEARCH_REFERENCE.md  analyze_prompts.py  app.js  compare.html  index.html  lineage.html  lineages.html  method.html  section.html  sections.html  styles.css  vercel.json
.github/workflows/: deploy.yml  update-data.yml
analyzer/: __init__.py  __main__.py  classifier.py  crossrefs.py  evidence.py  fetcher.py  genome.py  layers.py  lineage.py  matcher.py  models.py  parser.py  stability.py
claude-code-analyzer/: README.md  pyproject.toml
claude-code-analyzer/docs/: structured-component-plan.md
claude-code-analyzer/src/claude_code_analyzer/: __init__.py  cli.py  diagnose.py  export.py  models.py  snapshot.py
claude-code-analyzer/src/claude_code_analyzer/cli/: __init__.py  diagnose.py  diff.py  export.py
claude-code-analyzer/src/claude_code_analyzer/parsers/: __init__.py  markdown.py  structural.py
claude-code-analyzer/src/claude_code_analyzer/parsers/extractors/: __init__.py  normalize.py  system_prompt.py  tools.py  user_message.py
claude-code-analyzer/tests/: test_extractors.py  test_markdown.py  test_snapshot.py  test_structural.py
data/: genome.json  lineages.json  versions_meta.json
data/prompt_snapshots/: 1.0.0.json  1.0.1.json  1.0.10.json  1.0.100.json  1.0.102.json  1.0.103.json  1.0.105.json  1.0.106.json  1.0.11.json  (+252 more)
scripts/: fetch_versions.py
site/: index.html  package-lock.json  package.json  verify.mjs  vite.config.js
ui/: index.html  package-lock.json  package.json  vite.config.js
(+684 files in other folders)
